--- a/views/alcohol.ejs
+++ b/views/alcohol.ejs
@@ -47,7 +47,7 @@
 </table>
 
 <a href="">Ganti Attributes</a>
-<a href="">Pilih Alcohol Manual</a>
+<a href="/alcohols/<%= usersData.id %>/manual">Pilih Alcohol Manual</a>
 
 </body>
 </html>
