--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,12 @@
 
   <h1>Welcome to the alcohol Advisor</h1>
   <img src="/v4-728px-Drink-Wine-Step-4-Version-2.jpg" width="416" height="416"><br>
+  
+  <% if (isLogin) { %>
+    <a href="/alcohols//result">Hahahahaha</a>
+  <% } else { %> 
   <a href="/home/reg">Registrasi</a> | <a href="/home/login">Login</a><br><br>
+    <% } %>
 
   <h1>Disini anda dapat menentukan pilihan dengan rasa angur yang anda inginkan</h1 >
 </body>
