Tampilan sederhana dan ada logout

--- a/views/alcoholadd.ejs
+++ b/views/alcoholadd.ejs
@@ -24,8 +24,15 @@
 }
 
 </style>
+<% include ../views/partial/style %>
 </head>
 <body>
+
+<div class="header">
+    <a href="/home">Home</a>
+    <a href="/home/logout">Log Out</a>
+</div>
+
 <p class=headline><%= message %></p>
 
 Choose Subject:
