--- a/views/alcoholnewbie.ejs
+++ b/views/alcoholnewbie.ejs
@@ -25,11 +25,12 @@
 
 </style>
 </head>
-<body>
+<body style="text-align:center">
 <p class=headline>Newbie </p>
 
 <a href="/alcohols/result/newbie">New to Alcohol</a>
 
+<div align="center">
 <table border =1>
     <thead>
         <td>Alcohol Name</td>
@@ -50,6 +51,7 @@
         <% } %>
     </tbody>
 </table>
+</div>
 
 
 
