--- a/views/alcoholresult.ejs
+++ b/views/alcoholresult.ejs
@@ -25,11 +25,12 @@
 
 </style>
 </head>
-<body>
+<body style="text-align:center">
 <p class=headline>Alcohols Summary </p>
 
 <a href="/alcohols/result/user">Based On Users</a>
 
+<div align="center">
 <table border =1>
     <thead>
         <td>Alcohol Name</td>
@@ -48,7 +49,7 @@
         <% } %>
     </tbody>
 </table>
-
+</div>
 
 
 
