--- a/views/alcoholresultnew.ejs
+++ b/views/alcoholresultnew.ejs
@@ -1,72 +1,79 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> <%= title %> </title>
-<style>
-.headline {
-    color:  #0903ff;
-    font-size: 30px;
-}
-.back {
-    color:  #0903ff;
-    font-size: 14px;
-}
+  <head>
+    <title><%= title %></title>
+    <style>
+      .headline {
+        color: #0903ff;
+        font-size: 20px;
+      }
+      .back {
+        color: #0903ff;
+        font-size: 14px;
+      }
 
-.submit {
-  background-color: #0903ff;
-  color: white;
-  padding: 16px 5px;
-  margin: 8px 10px;
-  border: none;
-  cursor: pointer;
-  width: 10%;
-  opacity: 1;
-}
+      .submit {
+        background-color: #0903ff;
+        color: white;
+        padding: 16px 5px;
+        margin: 8px 10px;
+        border: none;
+        cursor: pointer;
+        width: 10%;
+        opacity: 1;
+      }
+    </style>
+    <% include ../views/partial/style %>
+  </head>
+  <body style="text-align:center">
+    <div class="header">
+      <a href="/home">Home</a>
+      <a href="/home/logout">Log Out</a>
+    </div>
 
-</style>
-</head>
-<body>
-<p class=headline> Alcohol List Summary</p>
+    <p class="headline">Alcohol List Summary</p>
 
-
-<table border =1>
-    <thead>
-        <td>User Name</td>
-        <td>Alcohol Concentration Type</td>
-        <td>Users</td>
-    </thead>
-    <tbody>
-        <% var i = 0 %>
-        <% for(let userList of usersData) { %>
+    <div align="center">
+      <table border="1" width="600px">
+        <thead style="text-align:center" class="headline">
+          <td>User Name</td>
+          <td>Alcohol Concentration Type</td>
+          <td>Users</td>
+        </thead>
+        <tbody>
+          <thead style="text-align:center">
+            <% var i = 0 %> <% for(let userList of usersData) { %>
             <tr>
-                <td><%=userList.dataValues.firstName%> <%=userList.dataValues.lastName%></td>
-                <td>
-                    <% if(userList.dataValues.isAlcohol == 'yes') {%>
-                        High
-                    <% } else { %>
-                        Low
-                    <% } %>
-                </td>
-                <td>
-                    <% for(let alcoholList of userList.dataValues.Alcohol) { %>
-                        <%= alcoholList.dataValues.alcoholName %>
-                        <br>
-                    <% } %>
+              <td>
+                <%=userList.dataValues.firstName%>
+                <%=userList.dataValues.lastName%>
+              </td>
+              <td>
+                <% if(userList.dataValues.isAlcohol == 'yes') {%> High <% } else
+                { %> Low <% } %>
+              </td>
+              <td>
+                <% for(let alcoholList of userList.dataValues.Alcohol) { %> <%=
+                alcoholList.dataValues.alcoholName %>
+                <br />
+                <% } %>
+              </td>
+            </tr>
+            <% } %>
+          </thead>
+        </tbody>
+      </table>
+    </div>
+    <p style="text-align:center">Wanna update your alcohol list?</p>
+    <a href="/alcohols/<%= usersData[0].dataValues.id %>/manual"
+      >More Alcohol</a
+    >
+    |
+    <a href="/alcohols/<%= usersData[0].dataValues.id %>/delete"
+      >Remove Alcohol</a
+    >
 
-                </td>
-            </tr> 
-        <% } %>
-    </tbody>
-</table>
-
-<p>Wanna update your alcohol list?</p>
-<a href="/alcohols/<%= usersData[0].dataValues.id %>/manual">More Alcohol</a>   |   
-<a href="/alcohols/<%= usersData[0].dataValues.id %>/delete">Remove Alcohol</a>
-
-<br><br>
-<a href="/alcohols/result">See Our Alcohol List</a>
-
-
-
-</body>
+    <br /><br />
+    <a href="/alcohols/result">See Our Alcohol List</a>
+  </body>
 </html>
