--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,16 +9,15 @@
   table,th,td {
     border: 1px solid black
   }
-  
   </style>
+  <% include ../views/partial/style %>
 </head>
 <body>
-  <!-- Bagian Judul Atas dan add Student -->
-  <h1>Welcome To alcohol</h1>
-  <!-- <a href="/teacher">Show All Data</a><br> -->
-
+  
+  <h1 style="text-align:center">Welcome To alcohol</h1>
+  
   <br>
-    <form method="post">
+    <form style="text-align:center" method="post">
       Username  : <br>
       <input type="text" name="Username" required><br><br>
       Password       : <br>
