--- a/views/addattributes.ejs
+++ b/views/addattributes.ejs
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-<p class=headline><%= message %></p>
-    
+    <% include ../views/partial/style %>
+  </head>
+  <body>
+    <div class="header">
+      <a href="/home">Home</a>
+      <a href="/home/logout">Log Out</a>
+    </div>
+    <p class="headline"><%= message %></p>
+
     Choose Your Preferences:
     <form METHOD="POST" action="/home/<%= usersData.id %>/addattributes">
-        Have you ever drunken alcohol?
-        <select  name="isAlcohol">
-            <option value="yes"> Yes </option>
-            <option value="no"> No </option>
-        </select>
-        <br>
-    Choose Drink Body:
-    <select  name="drinkBody">
+      Have you ever drunken alcohol?
+      <select name="isAlcohol">
+        <option value="yes"> Yes </option>
+        <option value="no"> No </option>
+      </select>
+      <br />
+      Choose Drink Body:
+      <select name="drinkBody">
         <option value="Light"> Light </option>
         <option value="Medium"> Medium </option>
         <option value="High"> High </option>
-    </select>
-    <br>
-    Choose After Taste:
-    <select  name="afterTaste">
+      </select>
+      <br />
+      Choose After Taste:
+      <select name="afterTaste">
         <option value="Light"> Light </option>
         <option value="Medium"> Medium </option>
         <option value="High"> High </option>
-    </select>
-    <br>
-    <button type="submit">Add Your Preference</button>
-</form>
-</body>
+      </select>
+      <br />
+      <button type="submit">Add Your Preference</button>
+    </form>
+  </body>
 </html>
