--- a/views/alcohol.ejs
+++ b/views/alcohol.ejs
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> <%= title %> </title>
-<style>
-.headline {
-    color:  #0903ff;
-    font-size: 30px;
-}
-.back {
-    color:  #0903ff;
-    font-size: 14px;
-}
+  <head>
+    <title><%= title %></title>
+    <style>
+      .headline {
+        color: #0903ff;
+        font-size: 30px;
+      }
+      .back {
+        color: #0903ff;
+        font-size: 14px;
+      }
 
-.submit {
-  background-color: #0903ff;
-  color: white;
-  padding: 16px 5px;
-  margin: 8px 10px;
-  border: none;
-  cursor: pointer;
-  width: 10%;
-  opacity: 1;
-}
+      .submit {
+        background-color: #0903ff;
+        color: white;
+        padding: 16px 5px;
+        margin: 8px 10px;
+        border: none;
+        cursor: pointer;
+        width: 10%;
+        opacity: 1;
+      }
+    </style>
+    <% include ../views/partial/style %>
+  </head>
+  <body>
+    <div class="header">
+      <a href="/home">Home</a>
+      <a href="/home/logout">Log Out</a>
+    </div>
+    <p class="headline">Hi, <%= usersData.firstName %></p>
+    <p>Berikut ini alcohol sesuai selera Anda</p>
 
-</style>
-</head>
-<body>
-<p class=headline>Hi, <%= usersData.firstName %> </p>
-<p>Berikut ini alcohol sesuai selera Anda</p>
+    <table border="1">
+      <thead>
+        <td>Alcohol Name</td>
+        <td>Body</td>
+        <td>After Taste</td>
+      </thead>
+      <tbody>
+        <% var i = 0 %> <% for(let alcoholList of alcoholsData) { %>
+        <tr>
+          <td><%= alcoholList.dataValues.alcoholName%></td>
+          <td><%= alcoholList.dataValues.body%></td>
+          <td><%= alcoholList.dataValues.taste%></td>
+        </tr>
+        <% } %>
+      </tbody>
+    </table>
 
-<table border =1>
-        <thead>
-            <td>Alcohol Name</td>
-            <td>Body</td>
-            <td>After Taste</td>
-        </thead>
-        <tbody>
-            <% var i = 0 %>
-            <% for(let alcoholList of alcoholsData) { %>
-                <tr>
-                    <td><%= alcoholList.dataValues.alcoholName%></td>
-                    <td><%= alcoholList.dataValues.body%></td>
-                    <td><%= alcoholList.dataValues.taste%></td>
-                </tr> 
-            <% } %>
-        </tbody>
-</table>
-
-<p>Wanna add more alcohol to your list?</p>
-<a href="/alcohols/<%= usersData.id %>/manual">More Alcohol</a>
-
-</body>
+    <p>Wanna add more alcohol to your list?</p>
+    <a href="/alcohols/<%= usersData.id %>/manual">More Alcohol</a>
+  </body>
 </html>
