--- a/views/alcoholdelete.ejs
+++ b/views/alcoholdelete.ejs
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title> <%= title %> </title>
-<style>
-.headline {
-    color:  #0903ff;
-    font-size: 30px;
-}
-.back {
-    color:  #0903ff;
-    font-size: 14px;
-}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title><%= title %></title>
+    <style>
+      .headline {
+        color: #0903ff;
+        font-size: 30px;
+      }
+      .back {
+        color: #0903ff;
+        font-size: 14px;
+      }
 
-.submit {
-  background-color: #0903ff;
-  color: white;
-  padding: 16px 5px;
-  margin: 8px 10px;
-  border: none;
-  cursor: pointer;
-  width: 10%;
-  opacity: 1;
-}
-
-</style>
-</head>
-<body>
-<p class=headline><%= message %></p>
-
-Choose Subject:
-<form METHOD="POST" action="/alcohols/<%= usersData[0].dataValues.id %>/delete">
-    
-    <select  name="id">
-    <% for(let alcoholList of usersData[0].dataValues.Alcohol) { %>
-        <option value= <%= alcoholList.dataValues.id %>> <%= alcoholList.dataValues.alcoholName %> </option>
-    <% } %>
-
-    </select>
-    <br>
+      .submit {
+        background-color: #0903ff;
+        color: white;
+        padding: 16px 5px;
+        margin: 8px 10px;
+        border: none;
+        cursor: pointer;
+        width: 10%;
+        opacity: 1;
+      }
+    </style>
+    <% include ../views/partial/style %>
+  </head>
+  <body style="text-align:center">
+      <body>
+          <div class="header">
+            <a href="/home">Home</a>
+            <a href="/home/logout">Log Out</a>
+          </div>
+    <p class="headline"><%= message %></p>
+    <h1 class="headline">
+      Choose Subject:
+    </h1>
+    <form METHOD="POST" action="/alcohols/<%= usersData[0].dataValues.id %>/delete">
+        <select  name="id" style="width: 100px; height: 25px;">
+                <% for(let alcoholList of usersData[0].dataValues.Alcohol) { %>
+                <option value= <%= alcoholList.dataValues.id %>> <%= alcoholList.dataValues.alcoholName %> </option>
+                <% } %>
+                
+        </select>
+        <br>
     <button type="submit">Delete Alcohol</button>
-</form>
-
-
-</body>
+    </form>
+  </body>
 </html>
