--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -2,6 +2,7 @@
   <div class="header">
     <a href="/home">Home</a>
     <a href="/home/logout">Log Out</a>
+    <a href="/alcohols/result">Alcohol Result</a>
   </div>
 <% } else { %> 
   <div class="header">
